cmake_minimum_required( VERSION 3.11 FATAL_ERROR )
project(Vectorlike_leptons)
set(CMAKE_BUILD_TYPE Debug)

list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
find_package(ROOT 6.14 REQUIRED)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

include(CheckIncludeFile)
check_include_file("dirent.h" HAVE_DIRENT LANGUAGE CXX)
if(NOT HAVE_DIRENT)
    message(FATAL_ERROR "dirent.h is not available.")
endif()
check_include_file("errno.h" HAVE_ERRNO LANGUAGE CXX)
if(NOT HAVE_ERRNO)
    message(FATAL_ERROR "errno.h is not available.")
endif()
check_include_file("getopt.h" HAVE_GETOPT LANGUAGE CXX)
if(NOT HAVE_GETOPT)
    message(FATAL_ERROR "getopt.h is not available.")
endif()
check_include_file("sys/types.h" HAVE_SYSTYPES LANGUAGE CXX)
if(NOT HAVE_SYSTYPES)
    message(FATAL_ERROR "sys/types.h is not available.")
endif()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable(makeVLLFFs ${PROJECT_SOURCE_DIR}/src/makeVLLFFs.cxx)
target_link_libraries(makeVLLFFs PUBLIC ROOT::Tree ROOT::TreePlayer ROOT::Physics Threads::Threads)
configure_file(${PROJECT_SOURCE_DIR}/src/produce_el_ffs.sh ${CMAKE_BINARY_DIR}/bin/produce_el_ffs.sh COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/src/produce_mu_ffs.sh ${CMAKE_BINARY_DIR}/bin/produce_mu_ffs.sh COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/src/produce_heavytau_ffs.sh ${CMAKE_BINARY_DIR}/bin/produce_heavytau_ffs.sh COPYONLY)
configure_file(${PROJECT_SOURCE_DIR}/src/produce_tau_ffs.sh ${CMAKE_BINARY_DIR}/bin/produce_tau_ffs.sh COPYONLY)
file(COPY ${PROJECT_SOURCE_DIR}/vectorlike-leptons-data DESTINATION ${CMAKE_BINARY_DIR})

